Exams/exam02/5-0-brainfuck/trace/5-0-brainfuck.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z1r5p42.42.us.org
Darwin 17.5.0 x86_64
$> date
Fri Apr 12 21:59:45 PDT 2019
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.1.0 (clang-902.0.39.1)
Target: x86_64-apple-darwin17.5.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.1.0 (clang-902.0.39.1)
Target: x86_64-apple-darwin17.5.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/piscine-c-exam02/exam_20190413/esupatae

= Git history ==================================================================
$> git -C /var/folders/xl/7c7hkhs957zcn6h_fhbp1b7m0000gp/T/tmpSQv3VM/user log --pretty='%H - %an, %ad : %s'
6befe8d68d2690034069c138e23db149b55d2082 - Exam 42, Fri Apr 12 21:59:35 2019 -0700 : Level 5
af54b9f7c0f87d246db751ffd2ba3976d3d9b621 - Exam 42, Fri Apr 12 21:50:49 2019 -0700 : Level 4: fprime
e4dbaaaed16d0bebfab33b961976c574c79da662 - Exam 42, Fri Apr 12 21:15:38 2019 -0700 : Level 4: ft_list_foreach
fd1cf173d84892aba3f423dd05073ccecc4872aa - Exam 42, Fri Apr 12 20:43:17 2019 -0700 : Level 4: sort_list
e808c2e075142838b7b5ce1296fe5d4ec39d3f34 - Exam 42, Fri Apr 12 19:38:58 2019 -0700 : Level 3: expand_str
1c367f78a40d577937b1c92cfe207356a9ee1deb - Exam 42, Fri Apr 12 19:08:21 2019 -0700 : Level 2: ft_strdup
bfd2038c15ca21665208ecdd8ce4219b5946a9d2 - Exam 42, Fri Apr 12 18:42:42 2019 -0700 : Level 1: first_word
5e92b2ecc7623fe6a189cb70e0add890c9b96426 - Exam 42, Fri Apr 12 18:13:50 2019 -0700 : Level 0: aff_first_param
 
= Collected files ==========================================
$> ls -lAR /var/folders/xl/7c7hkhs957zcn6h_fhbp1b7m0000gp/T/tmpSQv3VM/user
total 8
-rw-r--r--  1 deepthought  deepthought  2095 Apr 12 21:59 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Apr 12 21:59 aff_first_param
drwxr-xr-x  4 deepthought  deepthought   136 Apr 12 21:59 brainfuck
drwxr-xr-x  3 deepthought  deepthought   102 Apr 12 21:59 expand_str
drwxr-xr-x  3 deepthought  deepthought   102 Apr 12 21:59 first_word
drwxr-xr-x  3 deepthought  deepthought   102 Apr 12 21:59 fprime
drwxr-xr-x  3 deepthought  deepthought   102 Apr 12 21:59 ft_list_foreach
drwxr-xr-x  3 deepthought  deepthought   102 Apr 12 21:59 ft_strdup
drwxr-xr-x  3 deepthought  deepthought   102 Apr 12 21:59 sort_list

/var/folders/xl/7c7hkhs957zcn6h_fhbp1b7m0000gp/T/tmpSQv3VM/user/aff_first_param:
total 8
-rw-r--r--  1 deepthought  deepthought  1224 Apr 12 21:59 aff_first_param.c

/var/folders/xl/7c7hkhs957zcn6h_fhbp1b7m0000gp/T/tmpSQv3VM/user/brainfuck:
total 16
-rw-r--r--  1 deepthought  deepthought  1135 Apr 12 21:59 brainfunk.c
-rw-r--r--  1 deepthought  deepthought   984 Apr 12 21:59 brainfunk.h

/var/folders/xl/7c7hkhs957zcn6h_fhbp1b7m0000gp/T/tmpSQv3VM/user/expand_str:
total 8
-rw-r--r--  1 deepthought  deepthought  1358 Apr 12 21:59 expand_str.c

/var/folders/xl/7c7hkhs957zcn6h_fhbp1b7m0000gp/T/tmpSQv3VM/user/first_word:
total 8
-rw-r--r--  1 deepthought  deepthought  1242 Apr 12 21:59 first_word.c

/var/folders/xl/7c7hkhs957zcn6h_fhbp1b7m0000gp/T/tmpSQv3VM/user/fprime:
total 8
-rw-r--r--  1 deepthought  deepthought  1494 Apr 12 21:59 fprime.c

/var/folders/xl/7c7hkhs957zcn6h_fhbp1b7m0000gp/T/tmpSQv3VM/user/ft_list_foreach:
total 8
-rw-r--r--  1 deepthought  deepthought  1061 Apr 12 21:59 ft_list_foreach.c

/var/folders/xl/7c7hkhs957zcn6h_fhbp1b7m0000gp/T/tmpSQv3VM/user/ft_strdup:
total 8
-rw-r--r--  1 deepthought  deepthought  1239 Apr 12 21:59 ft_strdup.c

/var/folders/xl/7c7hkhs957zcn6h_fhbp1b7m0000gp/T/tmpSQv3VM/user/sort_list:
total 8
-rw-r--r--  1 deepthought  deepthought  1427 Apr 12 21:59 sort_list.c
 
= brainfuck ====================================================================
$> gcc -Wextra -Wall -Werror brainfunk.c -o user_exe 
brainfunk.c:15:21: error: unused parameter 'str' [-Werror,-Wunused-parameter]
void    solve_bf(char *str)
                       ^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
